<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".KonversiSuhu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Konversi Suhu"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"

        />

    <EditText
        android:id="@+id/edt_celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        />

    <Button
        android:id="@+id/btn_bsuhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cek_hasil"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/hasils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_celcius"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/hasil_akhir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_farenheit"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/akhir_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil_kelvin"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
 />

</LinearLayout>