<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".KonversiDolar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/konversi_dolar_ke_rupiah"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rupiah"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/edt_dolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_rupiah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hitung"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>



</LinearLayout>